Update job opportunity description in contact.html

--- a/contact.html
+++ b/contact.html
@@ -396,7 +396,7 @@
   <div class="left-panel">
     <span class="mono-label">// Get in Touch</span>
     <h1>Let's build<br>something <em>great.</em></h1>
-    <p>Open to UX research, UX design, product design, data analyst, and business analyst opportunities. Based in Metro Detroit — open to remote and hybrid roles. Graduating May 2026.</p>
+    <p>Open to UX research, UX design, product design, data analyst, and business analyst opportunities. Based in Metro Detroit — open to roles of any kind. Graduating May 2026.</p>
 
     <div class="direct-links">
       <a class="direct-link" href="mailto:bradyalowe@icloud.com">
