Update personal branding and contact information

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 <body>
 
   <nav>
-    <a class="nav-logo" href="#">BL — UX/UI</a>
+    <a class="nav-logo" href="#">BRADY LOWE — UX/UI</a>
     <ul>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#about">About</a></li>
@@ -710,16 +710,16 @@
   <section id="contact" class="contact-section">
     <p class="mono-label">// GET IN TOUCH</p>
     <h2>Let's build something great.</h2>
-    <p>Open to UX research, UX design, and product design roles. Based in Metro Detroit — open to remote and hybrid opportunities.</p>
+    <p>Open to UX research, UX design, and product design roles. Based in Metro Detroit — open to all opportunities.</p>
     <div class="contact-btns">
       <a class="btn-white" href="mailto:bradyalowe@icloud.com">Email Me</a>
-      <a class="btn-ghost" href="https://linkedin.com" target="_blank">LinkedIn</a>
+      <a class="btn-ghost" href="www.linkedin.com/in/brady-lowe-2290871bb" target="_blank">LinkedIn</a>
     </div>
   </section>
 
   <footer>
     <p>© 2026 BRADY LOWE — UX/UI DESIGN</p>
-    <p>EAST LANSING / METRO DETROIT, MI</p>
+    <p>METRO DETROIT, MI</p>
   </footer>
 
 </body>
