Update LinkedIn and Analytics Portfolio links

--- a/contact.html
+++ b/contact.html
@@ -409,7 +409,7 @@
         <span class="link-label">(586) 229-0999</span>
         <span class="arrow">→</span>
       </a>
-      <a class="direct-link" href="https://linkedin.com" target="_blank">
+      <a class="direct-link" href="www.linkedin.com/in/brady-lowe-2290871bb" target="_blank">
         <span class="icon">in</span>
         <span class="link-label">LinkedIn — Brady Lowe</span>
         <span class="arrow">→</span>
@@ -489,7 +489,7 @@
 <div class="portfolios-strip">
   <a class="port-link" href="index.html">← UX / UI Portfolio</a>
   <span style="font-family: 'Space Mono', monospace; font-size: 0.72rem; color: #2A2A2D;">|</span>
-  <a class="port-link" href="../analytics-portfolio/index.html">Analytics Portfolio →</a>
+  <a class="port-link" href="https://lowebrady.github.io/analytics-portfolio/index.html">Analytics Portfolio →</a>
 </div>
 
 <footer>
